--- a/03-09-2020/test.html
+++ b/03-09-2020/test.html
@@ -1,1 +1,9 @@
-
+<!Doctype Html>
+<html lang="en">
+<head>
+	<title>Guvi</title>
+</head>
+<body>
+	<script src="country.js"></script>
+</body>
+</html>
