--- a/16-09-2020/index.html
+++ b/16-09-2020/index.html
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col-md-8">
             <P style="font-family: 'Times New Roman', Times, serif; font-size: 2vw; font-weight: bold;">ELECTRIC CARS: THE FUTURE OF TRANSPORTATION</P>
-            <img src="images/africa.jpg" class="img-fluid" alt="Responsive image">
+            <img src="images/1.jpg" class="img-fluid" alt="Responsive image">
             <p style="margin-top: 10px; font-size: 1.1rem;">Lorem, ipsum dolor sit amet consectetur adipisicing
                 elit.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad recusandae officia cum debitis
