--- a/23-09-2020/index.html
+++ b/23-09-2020/index.html
@@ -16,8 +16,8 @@
         }
         th{
             width:100px;
-            padding: 20px;
-            font-size: 50px;
+            padding: 10px;
+            font-size: 100px;
             
         }
         a{
@@ -25,7 +25,7 @@
         }
 
         th:hover{
-            background-color: blue;
+            background-color: tan;
             cursor:pointer;
         }
 
